--- a/code/config.json
+++ b/code/config.json
@@ -1,7 +1,7 @@
 {"data_sources":{
   "glottolog_cldf":{
-    "location":"data/zenodo/glottolog-glottolog-cldf-ac0d616",
-    "zenodo_url": "https://zenodo.org/record/4061165/files/glottolog/glottolog-cldf-v4.3.zip"
+    "location":"data/git_submodules/glottolog-cldf",
+    "github_url": "https://github.com/glottolog/glottolog"
   }
   
 }
