--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ code/output/processed_data/RO_Hedvig_aggregate_all_obs_sep.tsv
 code/output/processed_data/RO_Hedvig_aggregate_smallest_island.tsv
 code/output/processed_data/Polygon_hierarchy_stats.tsv
 code/output/processed_data/RO_polygons_grouped_with_languages_with_climate_grouped.tsv
+latex/main.tex.bak
