rm groundhog lib dir

--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,4 @@ code/data/glottolog-cldf/**
 code/data/dplace-cldf/**
 code/output/plots/*
 latex/main.tex.bak
-code/groundhog_libraries**
+**groundhog_librari**
