--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,6 @@
 code/data/glottolog-cldf/**
 code/data/dplace-cldf/**
 code/output/plots/*
+code/output/results/drop_one*
 latex/main.tex.bak
 **groundhog_librari**
